--- a/amazing-table/src/app/globals.css
+++ b/amazing-table/src/app/globals.css
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #e1cdf1;
+    --foreground: #2a2340;
   }
 }
 
